v2.0.x-SNAPSHOT/connectors/database/databricks.mdx
---
title: Databricks Connector | OpenMetadata Integration Guide
description: Connect Databricks to OpenMetadata effortlessly. Complete setup guide, configuration steps, and metadata extraction for your data lakehouse platform.
sidebarTitle: Overview
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import ExternalIngestionDeployment from '/snippets/v2.0.x-SNAPSHOT/connectors/external-ingestion-deployment.mdx'
import MetadataAgentDatabase from '/snippets/connectors/metadata-agent/database.mdx'
import Related from '/snippets/v2.0.x-SNAPSHOT/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/databrick.webp'
name="Databricks"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Lineage", "Column-level Lineage", "Data Profiler", "Data Quality", "dbt", "Sample Data", "Auto-Classification", "Tags", "Owners"]}
unavailableFeatures={["Stored Procedures"]} />
<Tip>
As per the [documentation](https://docs.databricks.com/en/data-governance/unity-catalog/tags.html#manage-tags-with-sql-commands) here, note that we only support metadata `tag` extraction for Databricks version 13.3 version and higher.
</Tip>
In this section, we provide guides and references to use the Databricks connector.

<Info>
**Supported Authentication Types:**
- **Personal Access Token**: Token-based workspace authentication generated from User Settings in Databricks
- **Databricks OAuth**: OAuth2 Machine-to-Machine authentication using Service Principal credentials
- **Azure AD Setup**: Azure Active Directory authentication using Azure Service Principal (for Azure Databricks workspaces)
</Info>

Configure and schedule Databricks metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Unity Catalog](#unity-catalog)
- [Metadata Ingestion](#metadata-ingestion)
- [Query Usage](/v2.0.x-SNAPSHOT/connectors/ingestion/workflows/usage)
- [Data Profiler](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Data Quality](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/quality)
- [Lineage](/v2.0.x-SNAPSHOT/how-to-guides/data-lineage/workflow)
- [dbt Integration](/v2.0.x-SNAPSHOT/connectors/database/dbt)
- [Troubleshooting](/v2.0.x-SNAPSHOT/connectors/database/databricks/troubleshooting)

<ExternalIngestionDeployment />

## Requirements

Before configuring the Databricks connector, make sure the following requirements are in place.

### Permission Requirement

To enable full functionality of metadata extraction, profiling, usage, and lineage features in OpenMetadata, the following permissions must be granted to the relevant users in your Databricks environment.

### Metadata and Profiling Permissions

These permissions are required on the catalogs, schemas, and tables from which metadata and profiling information will be ingested.
```sql
GRANT USE CATALOG ON CATALOG <catalog_name> TO `<user>`;
GRANT USE SCHEMA ON SCHEMA <schema_name> TO `<user>`;
GRANT SELECT ON TABLE <table_name> TO `<user>`;
```
Ensure these grants are applied to all relevant tables for metadata ingestion and profiling operations.

### Usage and Lineage

These permissions enable OpenMetadata to extract query history and construct lineage information.
```sql
-- Query history for usage analytics and SQL-based lineage
GRANT SELECT ON SYSTEM.QUERY.HISTORY TO `<user>`;
GRANT USE SCHEMA ON SCHEMA system.query TO `<user>`;

-- System lineage tables for table and column-level lineage
GRANT SELECT ON system.access.table_lineage TO `<user>`;
GRANT SELECT ON system.access.column_lineage TO `<user>`;
GRANT USE SCHEMA ON SCHEMA system.access TO `<user>`;
```
These permissions allow access to Databricks system tables that track query activity and lineage relationships, enabling lineage and usage statistics generation.

### View Definitions

To extract view definitions, the user needs access to the information schema:
```sql
GRANT SELECT ON INFORMATION_SCHEMA.VIEWS TO `<user>`;
```

### Tags (Databricks 13.3+)

To extract Databricks tags on catalogs, schemas, tables, and columns, the following permissions are required:
```sql
GRANT SELECT ON `<catalog_name>`.information_schema.catalog_tags TO `<user>`;
GRANT SELECT ON `<catalog_name>`.information_schema.schema_tags TO `<user>`;
GRANT SELECT ON `<catalog_name>`.information_schema.table_tags TO `<user>`;
GRANT SELECT ON `<catalog_name>`.information_schema.column_tags TO `<user>`;
```
<Warning>
Tag extraction requires Databricks Runtime 13.3 or higher. If your cluster is running an older version, tags will not be extracted.
</Warning>

<Tip>
Adjust &lt;user&gt;, &lt;catalog_name&gt;, &lt;schema_name&gt;, and &lt;table_name&gt; according to your specific deployment and security requirements.
</Tip>

## Unity Catalog

If you are using Unity Catalog in Databricks, then checkout the [Unity Catalog](/v2.0.x-SNAPSHOT/connectors/database/unity-catalog) connector.

## Metadata Ingestion

To ingest metadata from Databricks, you need to create a service connection. The service connects Databricks with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Database Services**, then click the **Databricks** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Database/select-service/databricks.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other Databricks services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Database/service-name/databricks.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for Databricks. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Database/connection-details/databricks.png)

- **Host and Port**: Enter the fully qualified hostname and port number for your Databricks deployment in the Host and Port field.
- **Authentication Type**: Choose one of the following authentication methods:
  - **Personal Access Token**: Provide a `token` generated from **User Settings** > **Developer** > **Access Tokens** in your Databricks workspace.
  - **Databricks OAuth**: Provide a `clientId` and `clientSecret` for a Service Principal created in your Databricks Account Console.
  - **Azure AD Setup**: Provide `azureClientId`, `azureClientSecret`, and `azureTenantId` for an Azure Service Principal registered in Azure Active Directory (for Azure Databricks workspaces only).
- **HTTP Path**: Databricks compute resources URL.
- **Connection Timeout**: The maximum amount of time (in seconds) to wait for a successful connection to the data source. If the connection attempt takes longer than this timeout period, an error will be returned.
- **Catalog**: Catalog of the data source (Example: hive_metastore). This is an optional parameter, if you would like to restrict the metadata reading to a single catalog. When left blank, OpenMetadata Ingestion attempts to scan all the catalogs.
- **DatabaseSchema**: Database schema of the data source. This is an optional parameter, if you would like to restrict the metadata reading to a single database schema. When left blank, OpenMetadata Ingestion attempts to scan all the database schemas.
- **Query History Table**: Table name to fetch the query history from. Defaults to `system.query.history`.

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your database service. Filter patterns use regular expressions applied to asset names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave all filter patterns empty to ingest all databases, schemas, and tables available in the source.
</Tip>

**Filter Options**

The Database, Schema, and Table sections each include the following filter options:

- **Database**: Controls which databases OpenMetadata ingests from the source.
- **Schema**: Controls which schemas within the ingested databases are included.
- **Table**: Controls which tables and views within the ingested schemas are included.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentDatabase />

<Related />
